# SDC-Study-Team3

./: README.md  TeamTxt
board/: CMakeLists.txt  main.c
board/board/adapter/api/: board_api_command.h  board_api_command_table.c  board_api_command_table.h  board_api_command_table_mapper.h
board/board/adapter/api/operation/: board_operation.c  board_operation.h
board/board/adapter/api/request/: board_operation_request.c  board_operation_request.h
board/board/application/post/add/: add_service_command_handler.c  add_service_command_handler.h
board/board/application/service/: board_service_command.h  board_service_command_table.c  board_service_command_table.h  board_service_command_table_mapper.h
board/board/application/service/add/: add_service_command_handler.c  add_service_command_handler.h
board/board/application/service/delete/: delete_service_command_handler.c  (+1 more)
board/board/domain/model/: post_model.c  post_model.h
board/board/post/add/: add_post.c  add_post.h  게시글작성
board/created_file/: format_post.txt  format_test.txt
board/tests/: add_test.cpp  board_test.cpp  test_sample.cpp
board/utility/: keyboard_input.h
board/utility/file/: 파일 작성에 관련된 사항
board/utility/file/file_io/: make_file.h  read_data.c  read_data.h  write_content.c  write_content.h
board/utility/file/make_file/: make_file.c
board/utility/file/make_file_from_format/: make_file_from_format.c  make_file_from_format.h
board/utility/file/make_format_from_file/: make_format_from_file.c  make_format_from_file.h
board/utility/keyboard_input/: keyboard_input.c  keyboard_input.h
(+75 files in other folders)
